fix tick font on mobile

--- a/src/app/live-room/+settings/settings.component.scss
+++ b/src/app/live-room/+settings/settings.component.scss
@@ -126,7 +126,7 @@
 
             .bi {
               opacity: 1;
-              font-size: 8px;
+              font-size: 12px;
               color: rgb(255, 255, 255);
               transition: all .5s;
               transform: scale(.666) translateX(-1px) translateY(1px);
